--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -76,4 +76,16 @@
     transform: scale(1.2) rotate(15deg);
     cursor: unset;
 }
+.rounded-button-small-focus {
+    position: relative;
+    outline: none;
+    border-radius: 50%;
+    background-color: white;
+    border: none;
+    width: 40px;
+    height: 40px;
+    box-shadow: none;
+    transform: scale(1.2) rotate(15deg);
+    cursor: unset;
+}
 
